# ibkr_strategy_runner

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/systemd/: ibkr-strategy-runner-leaps.service
docs/: live_account_roadmap.md  operator_runbook.md
examples/: leaps-overlay.example.json
ibkr_strategy_runner/: __init__.py  alerts.py  cli.py  config.py  ibkr.py  leaps_strategy.py  live_state.py  models.py  simulation.py  sqlite_state.py  strategy.py
tests/: test_alerts.py  test_explain.py  test_live_account_gate.py  test_operator_commands.py  test_order_lifecycle.py  test_position_ownership.py  test_risk_limits.py  test_simulation_harness.py  test_sqlite_state.py
